--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,12 +1,11 @@
 site:
   title: My Demo Site
-  url: https://docs.demo.com
-  start_page: items::index.adoc
+  url: https://my-antora-demo-site.org
+  start_page: antora::index.adoc
 content:
   sources:
-  - url: /modules/ROOT/items/
+  - url: https://github.com/armelsteve/antora.git
     branches: master
-    start_path: docs
 ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
