--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -5,7 +5,7 @@ site:
 content:
   sources:
    - url: https://github.com/armelsteve/antora.git
-     start_path: component
+     start_path: ROOT
      branches: master
 
 ui:
